feat: added services to add and remove likes

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,10 @@ body {
   filter: initial;
 }
 
+.text-primary {
+  color: var(--primary-color);
+}
+
 .title-w-logo {
   display: flex;
   align-items: center;
