--- a/src/pages/SinglePlaylist/styles.css
+++ b/src/pages/SinglePlaylist/styles.css
@@ -8,6 +8,9 @@
 .horizontal-video-card .card-title {
   padding-top: 0;
 }
+.horizontal-video-card .card-img {
+  object-fit: cover;
+}
 
 .playist-video-container {
   padding-top: 0.5rem;
