feat: added history page

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,10 @@ a {
   border-bottom: 1px solid var(--light-grey);
 }
 
+.m-l-auto {
+  margin-left: auto;
+}
+
 .drawer-frame {
   height: calc(100vh - 4.2rem);
 }
