--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -2,6 +2,7 @@
   gap: 1rem;
   height: initial;
   padding-top: 0.5rem;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .video-card {
   padding-bottom: 1rem;
@@ -24,7 +25,7 @@
 }
 
 .video-card .card-img,
-.video-card .card-img .card-img-link {
+.video-card .card-img-link {
   height: 100%;
 }
 
@@ -164,7 +165,7 @@
 
 @media only screen and (max-width: 900px) {
   .video-grid {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .video-card {
     width: 100%;
@@ -172,11 +173,11 @@
 }
 @media only screen and (max-width: 650px) {
   .video-grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 @media only screen and (max-width: 450px) {
   .video-grid {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
