--- a/src/pages/SingleVideo/styles.css
+++ b/src/pages/SingleVideo/styles.css
@@ -1,13 +1,15 @@
 .video-player-card {
   min-width: 35rem;
   max-width: 60%;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 .video-player-card .card-actions .card-subtitle {
   padding-left: 0.5rem;
 }
 
-.video-player-card .divider {
+.description-divider {
   margin-top: 0.2rem;
   margin-bottom: 1rem;
 }
