--- a/src/pages/SingleVideo/styles.css
+++ b/src/pages/SingleVideo/styles.css
@@ -3,6 +3,7 @@
   max-width: 60%;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  margin-top: 0.5rem;
 }
 
 .video-player-card .card-actions .card-subtitle {
